# tg-cockpit

./: .env.example  .gitignore  CLAUDE.md  COMMANDS.md  README.md  pyproject.toml  start-bot.command
.claude/: settings.json
.claude/skills/analyze-channel/: SKILL.md
.claude/skills/content-plan/: SKILL.md
.claude/skills/draft-post/: SKILL.md
.claude/skills/format-tg/: SKILL.md
.claude/skills/make-poll/: SKILL.md
.claude/skills/reply-group/: SKILL.md
.claude/skills/review-performance/: SKILL.md
.claude/skills/schedule-week/: SKILL.md
.claude/skills/study-entity/: SKILL.md
.claude/skills/update-memory/: SKILL.md
src/tgcockpit/: __init__.py  __main__.py  bridge.py  cli.py  config.py  paths.py  pending.py
src/tgcockpit/analytics/: __init__.py  compute.py  models.py  report.py
src/tgcockpit/audio/: __init__.py  transcribe.py
src/tgcockpit/storage/: __init__.py  drafts.py  jsonstore.py  workspace.py
src/tgcockpit/study/: __init__.py  profile.py  vault.py
src/tgcockpit/telegram/: __init__.py  bot.py  client.py  discovery.py  groups.py  history.py  polls.py  posting.py  stats_api.py
src/tgcockpit/util/: __init__.py  formatting.py  logging.py  ratelimit.py  timefmt.py
tests/: conftest.py  test_analytics.py  test_auth.py  test_bot.py  test_bridge.py  test_client_lock.py  test_discovery.py  test_drafts_cli.py  test_formatting.py  test_groups.py  test_history.py  test_pending.py  test_polls.py  test_posting_dryrun.py  test_storage.py  test_study.py  test_transcribe.py  test_vault.py
