[project]
name = "tg-cockpit"
version = "0.1.0"
description = "Переиспользуемый CLI-фундамент для ведения Telegram-канала (история, аналитика, постинг, планирование) + Claude Code как мозг"
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [{ name = "semionovk" }]
dependencies = [
    "telethon>=1.36,<2.0",   # MTProto user-сессия: история, постинг, native schedule=, stats API
    "typer>=0.12",           # типизированный CLI
    "pydantic>=2.7",         # модели данных
    "pydantic-settings>=2.3",# секреты из .env
    "pyyaml>=6.0",           # config.yaml каналов
    "rich>=13.7",            # таблицы аналитики, прогресс
    "python-dateutil>=2.9",  # парсинг дат планирования
]

[project.optional-dependencies]
bot = [
    "aiogram>=3.7",          # тонкий бот-мост (меню, приём текста/голоса, стрим этапов)
    "claude-agent-sdk>=0.1", # headless Claude Code как «мозг» за ботом
]
audio = ["faster-whisper>=1.0"]  # локальный фолбэк транскрибации (Apple Speech — системный)
dev = [
    "pytest>=8.2",
    "pytest-asyncio>=0.23",
]

[project.scripts]
tgcockpit = "tgcockpit.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/tgcockpit"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.uv]
package = true
